--- a/portfolio.html
+++ b/portfolio.html
@@ -22,13 +22,13 @@
         <div class="menu-container menu-container-js">
             <ul class="nav-links-list list">
                 <li class="nav-link-item">
-                    <a href="#" class="link">Студия</a>
+                    <a href="./index.html" class="link">Студия</a>
                 </li>
                 <li class="nav-link-item">
-                    <a href="/portfolio.html" class="link">Портфолио</a>
+                    <a href="#" class="link current">Портфолио</a>
                 </li>
                 <li class="nav-link-item">
-                    <a href="#" class="link">Контакты</a>
+                    <a href="#contact-id" class="link">Контакты</a>
                 </li>
             </ul>
             <ul class="contact-us-list list">
