--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href="#" class="link current">Студия</a>
             </li>
             <li class="nav-link-item">
-              <a href="/portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
             <li class="nav-link-item">
               <a href="#contact-id" class="link">Контакты</a>
