add vector icon

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <form class="form js-speaker-form">
                 <button type="button" data-modal-close class="close-button">
                   <svg class="modal-icon-close">
-                    <use id="modal-icon-close" href="/images/icons/vector1.svg#modal-icon-close"></use>
+                    <use id="modal-icon-close" href="./images/icons/Vector1.svg#modal-icon-close"></use>
                   </svg>
                 </button>
                 <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
@@ -89,14 +89,14 @@
                         data-placeholder="Никита Дмитриевич" />
                       <label for="name" class="form-label">Имя</label>
                       <svg class="icon name">
-                        <use href="/images/icons/vector2.svg#vector2"></use>
+                        <use href="./images/icons/Vector2.svg#vector2"></use>
                       </svg>
                     </li>
                     <li class="form-item">
                       <input type="tel" name="tel" id="tel" class="form-input" placeholder=" " data-placeholder="+3806663333" />
                       <label for="tel" class="form-label">Телефон</label>
                       <svg class="icon call">
-                        <use href="/images/icons/vector3.svg#vector3"></use>
+                        <use href="./images/icons/Vector3.svg#vector3"></use>
                       </svg>
                     </li>
                     <li class="form-item">
@@ -104,7 +104,7 @@
                         data-placeholder="@gmail.com" />
                       <label for="email" class="form-label">Почта</label>
                       <svg class="icon message">
-                        <use href="/images/icons/vector4.svg#vector4"></use>
+                        <use href="./images/icons/Vector4.svg#vector4"></use>
                       </svg>
                     </li>
                   </ul>
