--- a/portfolio.html
+++ b/portfolio.html
@@ -10,60 +10,60 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
-<header class="header container">
-    <nav class="nav">
-        <a href="./" class="logo-link">Web<span class="special-color">Studio</span></a>
-        <button class="menu-btn menu-btn-js" type="button">
+    <header class="header container">
+        <nav class="nav">
+          <a href="./" class="logo-link">Web<span class="special-color">Studio</span></a>
+          <button class="menu-btn menu-btn-js" type="button">
             <svg width="40" height="40">
-                <use class="open-icon" href="./images/menu.svg#menu-icon"></use>
-                <use class="close-icon" href="./images/close.svg#close-icon"></use>
+              <use class="open-icon" href="./images/menu.svg#menu-icon"></use>
+              <use class="close-icon" href="./images/close.svg#close-icon"></use>
             </svg>
-        </button>
-        <div class="menu-container menu-container-js">
+          </button>
+          <div class="menu-container menu-container-js">
             <ul class="nav-links-list list">
-                <li class="nav-link-item">
-                    <a href="./index.html" class="link">Студия</a>
-                </li>
-                <li class="nav-link-item">
-                    <a href="#" class="link current">Портфолио</a>
-                </li>
-                <li class="nav-link-item">
-                    <a href="#contact-id" class="link">Контакты</a>
-                </li>
+              <li class="nav-link-item">
+                <a href="#" class="link">Студия</a>
+              </li>
+              <li class="nav-link-item">
+                <a href="portfolio.html" class="link current">Портфолио</a>
+              </li>
+              <li class="nav-link-item">
+                <a href="#contact-id" class="link">Контакты</a>
+              </li>
             </ul>
             <ul class="contact-us-list list">
-                <li class="contact-us-item">
-                    <a class="email-link link" href="mailto:info@devstudio.com">
-                        <svg width="16" height="12" class="link-icon">
-                            <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
-                        </svg>
-                        info@devstudio.com</a>
-                </li>
-                <li class="contact-us-item">
-                    <a class="tel-link link" href="tel:+380961111111">
-                        <svg width="16" height="12" class="link-icon">
-                            <use href="./images/icons/symbol-defs.svg#icon-Telephone"></use>
-                        </svg>
-                        +38 096 111 11 11</a>
-                </li>
+              <li class="contact-us-item">
+                <a class="email-link link" href="mailto:info@devstudio.com">
+                  <svg width="16" height="12" class="link-icon">
+                    <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com</a>
+              </li>
+              <li class="contact-us-item">
+                <a class="tel-link link" href="tel:+380961111111">
+                  <svg width="16" height="12" class="link-icon">
+                    <use href="./images/icons/symbol-defs.svg#icon-Telephone"></use>
+                  </svg>
+                  +38 096 111 11 11</a>
+              </li>
             </ul>
             <ul class="social-network-links-list list">
-                <li class="social-network-item">
-                    <a href="#">Instagram</a>
-                </li>
-                <li class="social-network-item">
-                    <a href="#">Twitter</a>
-                </li>
-                <li class="social-network-item">
-                    <a href="#">Facebook</a>
-                </li>
-                <li class="social-network-item">
-                    <a href="#">LinkedIn</a>
-                </li>
+              <li class="social-network-item">
+                <a href="#">Instagram</a>
+              </li>
+              <li class="social-network-item">
+                <a href="#">Twitter</a>
+              </li>
+              <li class="social-network-item">
+                <a href="#">Facebook</a>
+              </li>
+              <li class="social-network-item">
+                <a href="#">LinkedIn</a>
+              </li>
             </ul>
-        </div>
-    </nav>
-</header>
+          </div>
+        </nav>
+      </header>
     <!-- герой -->
     <main>
         <section>
