fixed portfolio html

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
           <div class="menu-container menu-container-js">
             <ul class="nav-links-list list">
               <li class="nav-link-item">
-                <a href="#" class="link">Студия</a>
+                <a href="index.html" class="link">Студия</a>
               </li>
               <li class="nav-link-item">
                 <a href="portfolio.html" class="link current">Портфолио</a>
@@ -447,5 +447,6 @@
             </form>
         </div>
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
